Small fix
Last character was truncated on author line if the line was longer than title and url.

--- a/src/styles/components/_BookmarkCard.scss
+++ b/src/styles/components/_BookmarkCard.scss
@@ -29,6 +29,7 @@
 
   &-Infos {
     overflow: hidden;
+    width: 100%;
   }
 
   &-Title {
